[package]
name = "travel-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "travel_token"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token"] }
solana-program = "1.18.0"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[profile.release]
overflow-checks = true